--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": "./src",
-    "outDir": "dist",
+    "outDir": "public/js/",
     "strict": true, 
     "target": "ES3",
     "lib": ["es2015", "DOM"]
